--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,32 +86,6 @@
 // 	height: 35px;
 // }
 
-// .widget {
-//     background-image: linear-gradient(#10bfde, blue);
-//     width: 150px;
-//     height: 150px;
-//     border-radius: 50%;
-//     opacity: 0.8;
-//     transition: opacity 0.25s;
-//     transition: width 0.1s;
-//     transition: height 0.1s;
-//     transform-origin: center;
-//     border: 2px black solid;
-
-// }
-
-// .widget:hover {
-//     opacity: 0.9;
-//     cursor: pointer;
-// }
-
-// .widget:active {
-//     opacity: 1;
-//     background-image: linear-gradient(#4cd9f1, blue);
-//     width: 180px;
-//     height: 180px;
-//     animation: 1s;
-// }
 
 // .grid-container {
 // 	margin-top:50px;
@@ -173,16 +147,21 @@
         background-color: rgb(224, 224, 224);
         cursor: pointer;
     }
+
+    .selected {
+        background: blue;
+    }
 }
 
 .messages-panel {
     width: calc(30vw - 12px);
-    height: calc(65vh - 22px);
+    // height: calc(65vh - 22px);
+    // height:100vh;
     border: 1px solid cyan;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: red;
+
 
     .messages-list {
         align-self: stretch;
@@ -190,23 +169,21 @@
     }
 
     .messages-input {
-        width: 80%;
-        height: 40px;
+        width: 100%;
+        height: 50px;
         border-top: 1px solid rgb(224, 224, 224);
-        background-color: #f0f0f0;
         display: flex;
 
         input {
             margin: auto;
-            height: 20px;
+            height: 30px;
             width: 100%;
             margin-left: 15px;
-            border-radius: 15px;
-            border: 1px solid rgb(224, 224, 224);
+            border-radius: 10px;
+            border: 1px solid lightgray;
 
             &:focus {
-                border-radius: 15px;
-                border: 2px solid #66a6ff;
+                border: 1px solid cyan;
                 outline: none;
             }
         }
@@ -246,6 +223,13 @@ body {
 	height: 100%;
 	max-height: 100vh;
 	overflow: hidden;
+
+    --baseR: 0;
+    --baseG: 0;
+    --baseB: 0;
+    --targetR: 0;
+    --targetG: 0;
+    --targetB: 0;
 }
 
 .center {
@@ -420,6 +404,13 @@ p {
   margin-left: 2rem;
 }
 
+.widget-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height:100%;
+}
 
 .grid-container {
   margin-top:50px;
@@ -439,4 +430,84 @@ p {
 
 .chat-grid { grid-area: chat-grid; }
 
-.main-grid { grid-area: main-grid; border: 1px solid #222222; }
+.main-grid { grid-area: main-grid; border: 5px solid cyan;  }
+
+// https://codepen.io/airen/pen/dXZgyq
+// HEXAGON
+.hexagon {
+	width: 80px;
+	height: 40px;
+	background: magenta;
+    // margin: 150px auto;
+	position: relative;
+  
+  &:before,
+  &:after {
+    content: "";
+	  position: absolute;
+	  width: 0;
+	  height: 0;
+  }
+  
+  &:before {
+    top: -25px;
+	  left: 0;
+	  border-left: 40px solid transparent;
+	  border-right: 40px solid transparent;
+	  border-bottom: 25px solid magenta;
+  }
+  &:after {
+    bottom: -25px;
+	  left: 0;
+	  border-left: 40px solid transparent;
+	  border-right: 40px solid transparent;
+	  border-top: 25px solid magenta;
+  }
+}
+
+
+// BALL
+.widget {
+    background-image: linear-gradient(#10bfde, blue);
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    opacity: 0.8;
+    transition: opacity 0.25s;
+    transition: width 0.1s;
+    transition: height 0.1s;
+    transform-origin: center;
+    border: 2px black solid;
+
+}
+
+.widget:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.widget:active {
+    opacity: 1;
+    background-image: linear-gradient(#4cd9f1, blue);
+    width: 180px;
+    height: 180px;
+    animation: 1s;
+}
+
+
+
+.bg-transition {
+    transition: background 1s;
+    animation: bgTransition 3s forwards;
+}
+
+@keyframes bgTransition {
+    0% {
+        background: rgb(var(--baseR), var(--baseG), var(--baseB));    
+    }
+
+    100% {
+        background: rgb(var(--targetR), var(--targetG), var(--targetB));    
+    }
+
+}
