--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,9 +2,13 @@
 	box-sizing: border-box;
 }
 
+// Colors
+$clique-green: #35FF86;
+$not-black: #121212;
+
 html,
 body {
-	background: #121212;
+	background: $not-black;
 	color: white;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 200;
@@ -15,16 +19,18 @@ body {
 }
 
 .channel-item {
+    width: 100px;
+    height: 100px;
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid rgb(224, 224, 224);
+    border-bottom: 1px solid $clique-green;
     padding: 10px;
 
     div {
         font-weight: bold;
     }
 
-    span {
+    p {
         font-size: 10px;
     }
 
@@ -32,17 +38,6 @@ body {
         background-color: rgb(224, 224, 224);
         cursor: pointer;
     }
-}
-
-.messages-panel {
-  margin-top: auto;
-  height: 55vh;
-  // width: 300px;
-  background: transparent;
-  overflow-y: scroll;
-  // padding: 1.5rem;
-  scrollbar-width: none;
-  background: #121212;
 }
 
 .messages-input {
@@ -62,6 +57,15 @@ body {
           outline: none;
       }
   }
+}
+
+.messages-panel {
+  margin-top: auto;
+  height: 55vh;
+  background: transparent;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  background: #121212;
 }
 
 .center {
@@ -209,4 +213,11 @@ footer {
 
 header, footer {
   grid-column: 1 / 4;
+}
+
+.channel-tab {
+  font-size: 2rem;
+  font-weight: bold;
+  width: 200px;
+  height: 60px;
 }
