--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 // Colors
 $clique-green: #35FF86;
 $not-black: #121212;
+$also-not-black: #303030;
 
 html,
 body {
@@ -23,8 +24,11 @@ body {
     height: 100px;
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid $clique-green;
+    background: $not-black;
+    border: 1px solid lightgray;
     padding: 10px;
+    opacity: 0.8;
+    color: $clique-green;
 
     div {
         font-weight: bold;
@@ -35,8 +39,11 @@ body {
     }
 
     &:hover {
-        background-color: rgb(224, 224, 224);
+        opacity: 1;
         cursor: pointer;
+        background: $clique-green;
+        color: $not-black;
+        border: 1px solid chartreuse;
     }
 }
 
@@ -88,16 +95,19 @@ a {
 	font-weight: bold;
 	opacity: 1;
 	transition: opacity 0.15s;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.8;
+    color: orange;
+  }
+
 }
 
-a:hover {
-	opacity: 0.8;
-}
 
-a:active {
-	opacity: 0.8;
-  color: orange;
-}
 
 
 form {
@@ -168,10 +178,6 @@ p {
   padding: 0px 10px;
 }
 
-.messages-list {
-
-}
-
 .message {
   display: flex;
   flex-direction: row;
@@ -215,9 +221,64 @@ header, footer {
   grid-column: 1 / 4;
 }
 
+
+.channel-grid {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+}
+
+.user-slot {
+  width:50px;
+  height:50px;
+  border: 1px gray solid;
+  background: lightblue;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+    border: 1px white solid;
+  }
+}
+
+.tab-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .channel-tab {
-  font-size: 2rem;
-  font-weight: bold;
-  width: 200px;
-  height: 60px;
+  width: 150px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  button {
+    width: 100%;
+    height: 100%;
+    font-weight: bold;
+    outline: none;
+    color: $clique-green;
+    background: $not-black;
+    border: 1px solid lightgray;
+    opacity: 0.8;
+  }
+
+  .disabled {
+    color: lightgray;
+    background: $not-black;
+    border: 1px solid lightgray;
+  }
+
+
+
+  &:hover {
+      opacity: 1;
+      cursor: pointer;
+      background: $clique-green;
+      color: $not-black;
+      border: 1px solid chartreuse;
+  }
 }
