--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -51,32 +51,131 @@ body {
     }
 }
 
-.messages-input {
-  width: 100%;
-  height: 40px;
-  display: flex;
 
-  input {
+
+
+// CHAT 
+.chat-container {
+
+
+  // Tabs
+  .tab-container {
+    display: flex;
+    flex-direction: row;
+  
+    .channel-tab {
+      width: 50%;
+      height: 50px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    
+      button {
+        width: 100%;
+        height: 100%;
+        font-weight: bold;
+        outline: none;
+        color: $clique-green;
+        background: $not-black;
+        border: 1px solid lightgray;
+        opacity: 0.8;
+
+        &:disabled {
+          color: lightgray;
+          background: $not-black;
+          border: 1px solid lightgray;
+        }
+      
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+            background: $clique-green;
+            color: $not-black;
+            border: 1px solid chartreuse;
+            cursor: pointer;
+        }
+
+      }
+    
+
+    }
+  }
+
+  // Messages
+  .messages-panel {
+    height: 70vh;
+    margin: 0vh 0 3vh;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-top: auto;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    background: $not-black;
+    padding: 1rem 0.5rem;
+
+    .message {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      line-height: 0rem;
+      padding: 0px 0.5rem;
+    
+      .sender {
+        font-weight:bold;
+      }
+    }
+  }
+  
+  
+
+
+  // Input
+  .messages-input {
+    width: 100%;
+    height: 40px;
+    display: block;
+    position: absolute;
+    bottom: 8vh;
+  
+    input {
+      display: inline;
+      width:275px;
       height: 30px;
-      width: 100%;
-      margin-left: 15px;
+      margin: 0 10px 10px 10px;
       border-radius: 5px;
+      color: white;
       border: 1px solid lightgray;
-
+      background: transparent;
+      padding-left: 1rem;
+  
       &:focus {
-          border: 1px solid cyan;
+          border: 1px solid $clique-green;
           outline: none;
       }
-  }
-}
+    }
 
-.messages-panel {
-  margin-top: auto;
-  height: 55vh;
-  background: transparent;
-  overflow-y: scroll;
-  scrollbar-width: none;
-  background: #121212;
+    button {
+      height:30px;
+      background: $clique-green;
+      color: $not-black;
+      opacity: 0.8;
+      transition: all 0.15s;
+
+      &:hover {
+        opacity: 1;
+        color: white;
+      }
+
+      &:disabled {
+        opacity: 0.5;
+        color: lightgray;
+        background: $not-black;
+      }
+    }
+
+  }
 }
 
 .center {
@@ -132,42 +231,25 @@ p {
   padding: 0px 10px;
 }
 
-.message {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  line-height: 0rem;
-  padding: 0px 0.5rem;
 
-  .sender {
-    font-weight:bold;
-  }
-}
 
 .wireframe {
   border: 1px solid #35FF86;
 }
 
+// LAYOUT
 .grid {
   height: 100vh;
   display: grid;
-  grid-template-columns: 200px auto 350px;
+  grid-template-columns: 200px auto 375px;
   // grid-template-rows: repeat(3, 30%);
   grid-template-rows: 50px auto 40px;
   grid-gap: 1em;
 }
 
-header,
-aside,
-article,
-footer {
-  padding: 1em;
-}
-
 header, footer {
   grid-column: 1 / 4;
 }
-
 
 .channel-grid {
   display: grid;
@@ -189,48 +271,12 @@ header, footer {
   }
 }
 
-.tab-container {
-  display: flex;
-  flex-direction: row;
-}
-
-.channel-tab {
-  width: 150px;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-
-  button {
-    width: 100%;
-    height: 100%;
-    font-weight: bold;
-    outline: none;
-    color: $clique-green;
-    background: $not-black;
-    border: 1px solid lightgray;
-    opacity: 0.8;
-  }
-
-  .disabled {
-    color: lightgray;
-    background: $not-black;
-    border: 1px solid lightgray;
-  }
-
-  &:hover {
-      opacity: 1;
-      cursor: pointer;
-      background: $clique-green;
-      color: $not-black;
-      border: 1px solid chartreuse;
-  }
-}
 
 
 
 
+
+// SIGN UP / LOG IN
 .account {
   display: flex;
   flex-direction: column;
@@ -270,4 +316,31 @@ header, footer {
   font-size: 3rem;
   font-weight: bold;
   color: $clique-green;
+}
+
+
+
+
+.grid-container {
+
+
+
+  .chat-grid {
+
+
+    .chat {
+      margin-top: auto;
+      height: 80vh;
+      width: 300px;
+      background: transparent;
+      overflow-y: scroll;
+      padding: 1.5rem;
+      scrollbar-width: none;
+      opacity: 0.7;
+    }
+
+  }
+
+
+
 }
