--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -62,7 +62,7 @@ body {
   .tab-container {
     display: flex;
     flex-direction: row;
-  
+
     .channel-tab {
       width: 50%;
       height: 50px;
@@ -81,26 +81,27 @@ body {
         border: 1px solid lightgray;
         opacity: 0.8;
 
-        &:disabled {
-          color: lightgray;
-          background: $not-black;
-          border: 1px solid lightgray;
-        }
-      
         &:hover {
-            opacity: 1;
-            cursor: pointer;
-            background: $clique-green;
-            color: $not-black;
-            border: 1px solid chartreuse;
-            cursor: pointer;
+          opacity: 1;
+          cursor: pointer;
+          background: $clique-green;
+          color: $not-black;
+          border: 1px solid chartreuse;
+          cursor: pointer;
+        }
+
+        &:disabled {
+          background: #232323;
+          color: gray;
+          font-style: italic;
+          pointer-events: none;
         }
 
       }
-    
-
     }
+
   }
+
 
   // Messages
   .messages-panel {
@@ -116,15 +117,23 @@ body {
     padding: 1rem 0.5rem;
 
     .message {
+      border-top: 1px #232323 solid;
+      width: 100%;
       display: flex;
       flex-direction: row;
       align-items: center;
-      line-height: 0rem;
+      line-height: 1.25rem;
       padding: 0px 0.5rem;
     
       .sender {
         font-weight:bold;
       }
+
+    }
+
+    p {
+      // max-width: 250px;
+      padding: 0px 7px;
     }
   }
   
@@ -226,10 +235,6 @@ ul, li {
   list-style: none;
 }
 
-p {
-  max-width: 250px;
-  padding: 0px 10px;
-}
 
 
 
@@ -323,10 +328,7 @@ header, footer {
 
 .grid-container {
 
-
-
   .chat-grid {
-
 
     .chat {
       margin-top: auto;
@@ -341,6 +343,24 @@ header, footer {
 
   }
 
+}
+
+
+.channels-wrapper {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+
+  .channels-container {
+    margin-top:1.5rem;
+    width:80%;
+    height:100%;
+    display: grid;
+    grid-template-columns: 
+    repeat(auto-fill, minmax(150px, 1fr));
+    align-items: center;
+
+  }
 
 
 }
