--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -123,7 +123,7 @@ body {
       flex-direction: row;
       align-items: center;
       line-height: 1.25rem;
-      padding: 0px 0.5rem;
+      padding: 0 0.5rem;
     
       .sender {
         font-weight:bold;
