--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap');
+
 * {
 	box-sizing: border-box;
 }
@@ -25,6 +27,7 @@ body {
 	height: 100%;
 	max-height: 100vh;
 	overflow: hidden;
+  padding: 0.5rem;
 }
 
 img {
@@ -37,8 +40,6 @@ img {
 
 
 .channel {
-  
-
 
 
   .channel-item {
@@ -62,12 +63,14 @@ img {
 
       .channel-name {
         position: absolute;
-        margin: 0 0 50px 100px;
+        margin: 0 0 100px 70px;
+        text-align: center;
         font-family: 'Roboto', sans-serif;
         font-style: italic;
         font-weight: lighter;
         font-size: 1rem;
         color: white;
+        color: cyan;
     
       }
   }
@@ -77,9 +80,23 @@ img {
 
 }
 
+.channels-wrapper {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+  width: 80%;
+  height: 100%;
+}
 
-
-
+.channels-container {
+    margin-top:1.5rem;
+    width:80%;
+    height:50%;
+    display: grid;
+    grid-template-columns: 
+    repeat(auto-fill, minmax(150px, 1fr));
+    align-items: center;
+}
 
 
 
@@ -115,9 +132,9 @@ img {
         &:hover {
           opacity: 1;
           cursor: pointer;
-          background: $clique-green;
-          color: $not-black;
-          border: 1px solid chartreuse;
+          // background: $clique-green;
+          color: magenta;
+          border: 1px solid magenta;
           cursor: pointer;
         }
 
@@ -127,23 +144,66 @@ img {
           font-style: italic;
           pointer-events: none;
         }
-
-        .selected {
-          background: $clique-green;
-        }
-
-
-
       }
     }
+    
+    .general-tab {
+      width: 50%;
+      height: 70px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+
+      button {
+        width: 100%;
+        height: 100%;
+        font-weight: bold;
+        font-size: 1.2rem;
+        text-align: center;
+        outline: none;
+        color: white;
+        background: transparent;
+        border: 1px solid lightgray;
+        opacity: 0.8;
+
+        &:hover {
+          opacity: 1;
+          cursor: pointer;
+          // background: $clique-green;
+          color: $clique-green;
+          border: 1px solid $clique-green;
+          cursor: pointer;
+        }
+
+        &:disabled {
+          background: #232323;
+          color: gray;
+          font-style: italic;
+          pointer-events: none;
+        }
+      }
+
+      button .selected {
+        color: $clique-green !important;
+        border: 2px solid $clique-green !important;
+      }
+    }
+    
 
   }
+
+  .selected  {
+    color: magenta !important;
+    border: 2px solid magenta !important;
+  }
+
 
 
   // Messages
   .messages-panel {
     height: 70vh;
-    margin: 0vh 0 3vh;
+    margin: 0vh 0 5vh;
     display:flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -193,7 +253,7 @@ img {
       display: inline;
       width:275px;
       height: 30px;
-      margin: 0 10px 10px 10px;
+      margin: 15px;
       border-radius: 5px;
       color: white;
       border: 1px solid lightgray;
@@ -247,13 +307,9 @@ a {
   }
 }
 
-
-
-
 .wireframe {
   border: 1px solid $stroke-light;
 }
-
 
 
 // LAYOUT
@@ -276,21 +332,30 @@ header, footer {
   grid-template-rows: repeat(auto, 1fr);
 }
 
-// .user-slot {
-//   width:50px;
-//   height:50px;
-//   border: 1px gray solid;
-//   background: lightblue;
-//   opacity: 0.5;
+.leave-channel-button {
+  position: absolute;
+  display: block;
+  bottom: 70px;
+  left: 40px;
+  height: 50px;
+  width: 100px;
+  font-weight: bold;
+  background: transparent;
+  border: 2px magenta solid;
+  color: magenta;
 
-//   &:hover {
-//     opacity: 1;
-//     border: 1px white solid;
-//   }
-// }
+  &:hover {
+    border: 2px white solid;
+    color: white;
+    cursor: pointer;
+  }
 
 
 
+
+
+
+}
 
 
 
@@ -352,7 +417,7 @@ header, footer {
   justify-content: center;
 	margin: 10vh 0;
   // background-image: linear-gradient($not-black, rgb(27, 21, 103), $not-black);
-  background-image: linear-gradient($not-black, rgb(47, 80, 107), $not-black);
+  background-image: linear-gradient($not-black, rgb(69, 42, 78), $not-black);
   height: 75vh;
 
   .logo-text {
@@ -360,6 +425,7 @@ header, footer {
     letter-spacing: 1.5rem;
     font-weight: 200;
     color: white;
+    font-family: 'Quicksand', sans-serif;
   }
 
   .header-text {
@@ -402,8 +468,9 @@ header, footer {
   .nav-logo {
     color: $clique-green;
     font-weight: 800;
-    font-size: 1rem;
+    font-size: 1.2rem;
     letter-spacing: 0.2rem;
+    font-family: 'Quicksand', sans-serif;
   }
 
   .nav-hex {
@@ -416,6 +483,7 @@ header, footer {
     color: $clique-green;
     font-weight: bold;
     font-size: 1rem;
+    padding: 0 1rem;
   }
 
 }
