--- a/src/styles/widgets.scss
+++ b/src/styles/widgets.scss
@@ -22,8 +22,6 @@ $widget-hover-border: $clique-green;
 }
 
 
-
-
 // WIDGETS
 .widget {
     opacity: 1;
@@ -33,6 +31,16 @@ $widget-hover-border: $clique-green;
         opacity: 0.8;
         cursor: pointer;
     }
+
+    .svg {
+        transition: all 0.05s;
+
+        &:active {
+            width: 120px;
+            height: 120px;
+        }
+    }
+    
     
     // BALL
     .ball {
