--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,9 +25,10 @@ body {
 	font-weight: 200;
 	font-size: 16px;
 	height: 100%;
-	max-height: 100vh;
+	max-height: 97vh;
 	overflow: hidden;
-  padding: 0.5rem;
+  padding: 0.25rem;
+  border: red 1px solid;
 }
 
 img {
@@ -38,69 +39,144 @@ img {
   -ms-user-select: none;
 }
 
+a {
+	font-size: 1rem;
+	text-decoration: none;
+	color: white;
+	font-weight: bold;
+	opacity: 1;
+	transition: opacity 0.15s;
 
-.channel {
-
-
-  .channel-item {
-      // width: 100px;
-      // height: 100px;
-      display: flex;
-      flex-direction: row;
-      // background: $not-black;
-      // border: 1px solid lightgray;
-      padding: 10px;
-      margin: 10px;
-      opacity: 0.7;
-      color: $clique-green;
-      transition: all 0.15s;
-
-      &:hover {
-          opacity: 1;
-          cursor: pointer;
-          color: $not-black;
-      }
-
-      .channel-name {
-        position: absolute;
-        margin: 0 0 100px 70px;
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        font-style: italic;
-        font-weight: lighter;
-        font-size: 1rem;
-        color: white;
-        color: cyan;
-    
-      }
+  &:hover {
+    opacity: 0.8;
   }
 
-
-
-
+  &:active {
+    opacity: 0.8;
+    color: orange;
+  }
 }
 
-.channels-wrapper {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-  width: 80%;
+.wireframe {
+  border: 1px solid $stroke-light;
+}
+
+
+
+// APP LAYOUT --------------------------------
+.grid {
+  height: 97vh;
+  max-height: 93vh;
+  display: grid;
+  grid-template-columns: 150px auto 350px;
+  grid-template-rows: 50px auto 0px;
+  grid-gap: 1rem;
+  border: $clique-green 5px solid;
+}
+
+header, footer {
+  grid-column: 1 / 4;
+}
+
+
+
+//  MAIN VIEW ---------------
+.main-view-wrapper {
+	// display: flex;
+	// align-items: center;
+	// flex-direction: column;
+  width: 100%;
   height: 100%;
+  border: yellow 2px solid;
+  overflow: scroll;
+
+
+
+
+  // CHANNELS (Cliques) ---------------
+  .channels-container {
+    // margin-top:1.5rem;
+    width:100%;
+    height:100%;
+    // display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    // align-items: center;
+    border: red 2px solid;
+  
+  
+
+
+    
+
+    .channel {
+
+
+
+
+
+
+      .channel-slot {
+          
+        width: 111px;
+        height: 127px;
+        // display: flex;
+        // flex-direction: row;
+        // padding: 10px;
+        margin: 10px;
+        opacity: 0.7;
+        border: lightgrey 1px solid;
+        transition: all 0.15s;
+
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+            color: $not-black;
+        }
+
+        .channel-name {
+          position: absolute;
+          margin: 0 0 100px 70px;
+          text-align: center;
+          font-family: 'Roboto', sans-serif;
+          font-style: italic;
+          font-weight: lighter;
+          font-size: 1rem;
+          color: white;
+      
+        }
+      }
+    }
+
+
+
+
+
+
+
+
+  
+  
+  
+  
+  
+  
+  
+  }
+
 }
-
-.channels-container {
-    margin-top:1.5rem;
-    width:80%;
-    height:50%;
-    display: grid;
-    grid-template-columns: 
-    repeat(auto-fill, minmax(150px, 1fr));
-    align-items: center;
-}
+// END MAIN VIEW
 
 
 
-// CHAT 
+
+
+
+
+
+
+
+
+// CHAT ------------------------
 .chat-container {
 
 
@@ -200,7 +276,7 @@ img {
 
 
 
-  // Messages
+  // MESSAGES
   .messages-panel {
     height: 70vh;
     margin: 0vh 0 5vh;
@@ -241,7 +317,7 @@ img {
   
 
 
-  // Input
+  // INPUT FIELD
   .messages-input {
     width: 100%;
     height: 40px;
@@ -289,73 +365,14 @@ img {
 }
 
 
-a {
-	font-size: 1rem;
-	text-decoration: none;
-	color: white;
-	font-weight: bold;
-	opacity: 1;
-	transition: opacity 0.15s;
-
-  &:hover {
-    opacity: 0.8;
-  }
-
-  &:active {
-    opacity: 0.8;
-    color: orange;
-  }
-}
-
-.wireframe {
-  border: 1px solid $stroke-light;
-}
-
-
-// LAYOUT
-.grid {
-  height: 100vh;
-  display: grid;
-  grid-template-columns: 150px auto 350px;
-  grid-template-rows: 50px auto 40px;
-  grid-gap: 1em;
-}
-
-header, footer {
-  grid-column: 1 / 4;
-}
-
-.channel-grid {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(auto, 1fr);
-  grid-template-rows: repeat(auto, 1fr);
-}
-
-.leave-channel-button {
-  position: absolute;
-  display: block;
-  bottom: 70px;
-  left: 40px;
-  height: 50px;
-  width: 100px;
-  font-weight: bold;
-  background: transparent;
-  border: 2px magenta solid;
-  color: magenta;
-
-  &:hover {
-    border: 2px white solid;
-    color: white;
-    cursor: pointer;
-  }
 
 
 
 
 
 
-}
+
+
 
 
 
@@ -410,6 +427,9 @@ header, footer {
 }
 
 
+
+
+// HOME / LANDING PAGE
 .home {
 	display: flex;
 	flex-direction: column;
@@ -444,6 +464,8 @@ header, footer {
   }
 }
 
+
+// NAVBAR
 .nav-flex {
   display: flex;
   background: #242424;
@@ -486,4 +508,37 @@ header, footer {
     padding: 0 1rem;
   }
 
+}
+
+
+
+// SIDEBAR
+
+
+.sidebar-container {
+
+  height: 67vh;
+
+
+
+
+  .leave-channel-button {
+    position: absolute;
+    display: block;
+    bottom: 70px;
+    left: 40px;
+    height: 50px;
+    width: 100px;
+    font-weight: bold;
+    background: transparent;
+    border: 2px magenta solid;
+    color: magenta;
+  
+    &:hover {
+      border: 2px white solid;
+      color: white;
+      cursor: pointer;
+    }
+  
+  }
 }
